@@ -1,0 +1,4 @@
+DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
+EBUILD selinux-snmp-2.20110726.ebuild 332 RMD160 1f7ffedd41fdf8681c252061be068d41de0f838f SHA1 18955904fb2d8b03b1a2228eab9778e8bf51c40d SHA256 ee63ae1fca7138dd67fa60a479b671b86effbc05307661a627529008fa86effe
+MISC ChangeLog 287 RMD160 7fbbbc841d55ffe77905b717264fae2b2ad970b6 SHA1 d2a0e32e116a2d29af32adae90b71ba80fd3d2e8 SHA256 38d7f4dfb1a2044747c9cd568fb7c8fc376bdcddb8c0f6e8aa5c07549a341834
+MISC metadata.xml 228 RMD160 3f357d8e7655f13f385852ce9c24715a13bef3cd SHA1 ab84803d8b3496a93d753f7102ff9354a4099c1d SHA256 7e0ecb1b89397ce2499f05c59db1cedb980f505e433efddf7df805d0847e0b12
