@@ -1,0 +1,14 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+EAPI="4"
+
+IUSE=""
+MODS="snmp"
+
+inherit selinux-policy-2
+
+DESCRIPTION="SELinux policy for snmp"
+KEYWORDS="~amd64 ~x86"
+DEPEND="=sec-policy/selinux-base-policy-2.20110726-r1
+	!<sec-policy/selinux-snmpd-2.20110726"
