@@ -1,4 +1,3 @@
-DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
-EBUILD selinux-snmpd-2.20110726.ebuild 241 RMD160 3f9d309e08de767abf7e4847a757e44093ac8a41 SHA1 f79bd6ae3701aea7cc8b4817c7b9428fd533fff3 SHA256 fa117763ad42ae434237651323a257dc8c93583b4b8272ea7ad63b7bd20af893
-MISC ChangeLog 4203 RMD160 da5cc23dd224d27e0e4d74ee8e065bce382b9030 SHA1 2b4cc68cca187cf1bffe74d2b426f52ed81405a5 SHA256 263aecc986fb5557b0015b93d6bf1f5545376fe797e81cb880ffbd82f418f30c
+EBUILD selinux-snmpd-2.20110726.ebuild 350 RMD160 bf02e5760b3b66759475c50a01725abac1983cd0 SHA1 8deba49a8f30b9ae5cc0ead34e0cf6591f2decb8 SHA256 eb37b19652c80e5e3773b361f73fbcb2d748cc1772c02b558fd82ed1bc3c1147
+MISC ChangeLog 4320 RMD160 9dedd5eb59d9286112e696e4f569f0b63e767f17 SHA1 d9e889f9ac32d5d3b173e38cf3ed849e1e493c76 SHA256 1b92faad0e0c1efd01fa569d91756d16bb769ac8df4933a5026ff872f8f539e3
 MISC metadata.xml 229 RMD160 f943d057bc0156a6221fd21e3bbbc7b4aca42008 SHA1 9f1653a197ac64114cd67ae26aa5d2c1b7d0700b SHA256 6d7fcb81ce231d71f5add2e001e88873082fde46c2bdaa2eb983d67788a107d9
