@@ -3,11 +3,11 @@
 # $Header: $
 EAPI="4"
 
+DEPEND=">=sec-policy/selinux-snmp-2.20110726"
+
 IUSE=""
-MODS="snmpd"
-
-inherit selinux-policy-2
-
-DESCRIPTION="SELinux policy for snmpd"
-
+DESCRIPTION="SELinux policy for SNMPd (meta-package for snmp)"
+HOMEPAGE="http://hardened.gentoo.org/selinux"
 KEYWORDS="~amd64 ~x86"
+SLOT="0"
+LICENSE="public-domain"
