@@ -1,0 +1,10 @@
+# ChangeLog for sec-policy/selinux-snmp
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*selinux-snmp-2.20110726 (14 Aug 2011)
+
+  14 Aug 2011; <swift@gentoo.org> +selinux-snmp-2.20110726.ebuild,
+  +metadata.xml:
+  Introducing SELinux module for snmp
+
